2009-01-31  Hans Breuer  <hans@breuer.org>

	* objects/Misc/grid_object.c : give ranges to rows/columns properties
	to avoid crashing on negative numbers, similar for line_width

	* objects/Misc/pixmaps/grid_object.xpm objects/Misc/grid_object.c
	  objects/Misc/libmisc.c objects/Misc/Makefile.am sheets/Misc.sheet.in:
	patch from Don Blaheta adding a Grid object, bug #534118

	* doc/en/intro.xml doc/en/usage-quickstart.xml : moved "try Dia" 
	flowchart to introduction.

	* configure.in : configure failed to locate libpython when building GARNOME, 
	bug #338368 (Hans de Goede)

	* omf.make : bug #306737 - installation fails in install-data-hook-omf
	if omffile variable is empty (patch from Thomas Harding)

	* doc/en/*.xml : remove undefined entity  '.&pngfile'
	* po/POTFILES.in lib/sheetc : more strings to translate ;)
	* doc/en/Makefile.am : added new images ('make distcheck' passes)

	[
	  Huge documentation update from Mark Dexter, bug #455400, 
	  hope I didn't break anything during merge.
	]
	* doc/en/*.xml doc/en/graphics/*.png : 
	1. major edits to the following XML files: usage-quickstart.xml,
	usage-canvas.xml, usage-objects.xml, usage-objects-basic.xml,
	usage-objects-special.xml, usage-objects-selecting.xml. 
	Added documentation for items not previously documented (e.g., 
	Diagram Tree, Sheets and Objects, etc.) and expanded other 
	documentation.
	2. Added 78 screenshots (for a total of 82).
	3. Minor edit to authors.xml. (Still need to fix broken links and
	bad e-mails).
	4. Updated images. These changes obsolete the following bugs:
	#347209, #439974, #144128.

	* app/display.[ch] app/diagram.[ch] app/menus.[ch] : get rid of nearly
	unmaintainable UpdatableMenuItems and a lot of ui-variant-specific code
	by dynamic action lookup when updating sensitivity. This not only fixes
	bug #527565 but also bug #322190 and allows ...
	* app/interface.c : make Tool accelerator single key strokes - e.g. no